--- a/toDO
+++ b/toDO
@@ -10,10 +10,11 @@ Cases for notifications
 - when someone sends you a friend request
 - when someone accepts the friend request
 
-Don't save the images directly in the database
+Optimize stored images
 
 Add a chat bot
 
 Add pagination to notifications, newsfeed posts, friends, people you might know, mesages
 
 Scroll to the bottom of the messages list
+
