--- a/toDO
+++ b/toDO
@@ -3,16 +3,16 @@ TODO Optimize stored images
 TODO Add a chat bot
 TODO Add pagination to notifications, newsfeed posts, friends, people you might know, mesages
 TODO Create one context for the notifications
-TODO Create mobile navigation
 TODO Add search functionlity to search for users
-TODO Add the ability to edit the profile
 TODO Create a modal to show all the friends
-TODO Emprove responsivenes for the profile page
 
+DONE Create mobile navigation
 DONE ------------- Separate friends, friendRequests fields from user to other individuals collections
 DONE Scroll to the bottom of the messages list
 DONE Implement notifications
 DONE Cases for notifications
+DONE Create dit user modal
+DONE Emprove responsivenes for the profile page
 
 - when a friend creates a new post
 - when someone likes/comments a post
